--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>RTX GAMING</title>
+    <title>RG DEVELOPMENT</title>
     <style>
         body {
             background-image: url('https://cdn.discordapp.com/attachments/1144958656153137212/1145758160607510538/VOUCH_BOT.png');
